--- a/readme
+++ b/readme
@@ -15,7 +15,7 @@ TODO
 * Add workout summary
 * Allow editing of completed exercises
 * Allow for mutiple users 
-* <strike>OpenAuth sign in</strike>
+* <del>OpenAuth sign in</del>
 * Allow for "my exercises"
 
 
