--- a/readme
+++ b/readme
@@ -15,7 +15,7 @@ TODO
 * Add workout summary
 * Allow editing of completed exercises
 * Allow for mutiple users 
-* <del>OpenAuth sign in</del>
+* ~OpenAuth sign in~
 * Allow for "my exercises"
 
 
