--- a/readme
+++ b/readme
@@ -15,7 +15,7 @@ TODO
 * Add workout summary
 * Allow editing of completed exercises
 * Allow for mutiple users 
-* ~OpenAuth sign in~
+* ~~OpenAuth sign in~~
 * Allow for "my exercises"
 
 
